--- a/plantswap/components/Text/text.module.scss
+++ b/plantswap/components/Text/text.module.scss
@@ -4,8 +4,16 @@
   font-weight: 400;
   color: var(--text-color);
 
+  &--italic {
+    font-style: italic;
+  }
+
   &--bold {
     font-weight: 700;
+  }
+
+  &--thin {
+    font-weight: 300;
   }
 
   &--small {
@@ -14,5 +22,17 @@
 
   &--x-small {
     font-size: 0.75rem;
+  }
+
+  &--xx-small {
+    font-size: 0.625rem;
+  }
+
+  &--grey {
+    color: var(--color-dark-grey);
+  }
+
+  &--white {
+    color: var(--color-white);
   }
 }
