--- a/plantswap/components/Loader/loader.module.scss
+++ b/plantswap/components/Loader/loader.module.scss
@@ -1,6 +1,8 @@
 .loader {
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  left: 1rem;
   * {
     animation-name: beat !important;
   }
