:sparkles: about page last changes, left outlining, responsive media queries, max-height, contact us

--- a/plantswap/components/Header/header.module.scss
+++ b/plantswap/components/Header/header.module.scss
@@ -5,6 +5,7 @@
   height: var(--header-height);
   width: 100%;
   background-color: var(--color-green);
+  scroll-snap-align: start;
 
   &__logo {
     width: auto;
