--- a/plantswap/components/Forms/form1.module.scss
+++ b/plantswap/components/Forms/form1.module.scss
@@ -76,7 +76,7 @@ $primary-font-family: inherit;
     width: 1rem;
     height: 1rem;
 
-    border: 1px solid var(--wireframe-btn-background-color);
+    border: 1px solid var(--color-grey-light);
     border-radius: 4px;
 
     background-color: #fff;
@@ -111,7 +111,7 @@ $primary-font-family: inherit;
     select {
       padding: var(--S-spacer);
       height: 56px;
-      border: 1px solid var(--wireframe-btn-background-color);
+      border: 1px solid var(--color-grey-light);
       border-radius: var(--border-radius);
 
       color: var(--primary-text-color);
