--- a/plantswap/components/SwitcherCard/switchercard.module.scss
+++ b/plantswap/components/SwitcherCard/switchercard.module.scss
@@ -6,12 +6,13 @@
   border-radius: 0.5rem;
   padding: 1rem;
   cursor: pointer;
+  gap: var(--XXS-spacer);
 
   &--checked {
-    background-color: var(--color-black);
+    background-color: var(--color-blue-lighter);
 
     .switchercard__card-name-latin {
-      color: var(--color-white); // fixme to correct color;
+      color: var(--color-grey-darker); // fixme to correct color;
     }
   }
 
@@ -36,20 +37,35 @@
       appearance: none;
       align-self: flex-end;
       border: 1px solid #e3e3e3;
+      background-position: 500%;
 
       &:checked {
+        border: none;
+
+        background-repeat: no-repeat;
         background-color: var(--color-white);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='71.895' height='81.204' viewBox='0 0 71.895 81.204'%3E%3Cg id='Group_271' data-name='Group 271' transform='translate(7.418)'%3E%3Cpath id='Path_232' data-name='Path 232' d='M47.707,19.5l-2.28-.253C45.68,14.434,42.133,8.353,35.8,6.58l.507-2.28c6.84,2.027,11.907,8.614,11.4,15.2' transform='translate(-30.626 1.403)' fill='%233e4347'/%3E%3Cpath id='Path_233' data-name='Path 233' d='M43.492,4.653a5.565,5.565,0,1,1-7.854-.507,5.187,5.187,0,0,1,7.854.507M72.879,20.866l-.253-2.28c4.813-.507,9.88-5.573,10.387-11.907l2.28.253c-.507,6.84-6.08,13.174-12.414,13.934' transform='translate(-33.758 -1.229)' fill='%233e4347'/%3E%3Cpath id='Path_234' data-name='Path 234' d='M61.459,11.046a5.6,5.6,0,1,1-1.013-7.854,5.847,5.847,0,0,1,1.013,7.854' transform='translate(-6.63 -2.049)' fill='%233e4347'/%3E%3C/g%3E%3Cpath id='Path_240' data-name='Path 240' d='M102.7,45.454C103.969,71.8,50.261,89.789,34.554,58.628c-11.907-23.814,6.84-48.641,26.6-50.921C93.582,3.907,102.2,32.787,102.7,45.454Z' transform='translate(-30.83 6.104)' fill='%2394d82a'/%3E%3Cg id='Group_272' data-name='Group 272' transform='translate(11.575 33.571)'%3E%3Cpath id='Path_237' data-name='Path 237' d='M57.434,22.9c0,4.307-2.28,7.6-5.067,7.6S47.3,27.207,47.3,22.9s2.28-7.6,5.067-7.6,5.067,3.547,5.067,7.6' transform='translate(-17.153 -15.3)' fill='%233e4347'/%3E%3Cellipse id='Ellipse_19' data-name='Ellipse 19' cx='5.067' cy='7.6' rx='5.067' ry='7.6' transform='translate(0 0)' fill='%233e4347'/%3E%3Cpath id='Path_238' data-name='Path 238' d='M50.2,32.673c-6.08,0-11.4-2.28-11.4-4.56a.931.931,0,0,1,.253-.76c.253-.253.507-.253,1.013-.253s.76.253,1.52.507a23.741,23.741,0,0,0,8.867,1.773,20.891,20.891,0,0,0,8.614-1.773c.76-.253,1.013-.507,1.52-.507A.928.928,0,0,1,61.6,28.113c0,2.28-5.32,4.56-11.4,4.56' transform='translate(-30.187 2.794)' fill='%233e4347'/%3E%3C/g%3E%3Cg id='Group_273' data-name='Group 273' transform='translate(2.456 48.772)' opacity='0.7'%3E%3Cellipse id='Ellipse_20' data-name='Ellipse 20' cx='8.107' cy='6.333' rx='8.107' ry='6.333' transform='translate(47.374)' fill='%23ea83a3'/%3E%3Cellipse id='Ellipse_21' data-name='Ellipse 21' cx='6.587' cy='4.56' rx='6.587' ry='4.56' transform='translate(0 1.52)' fill='%23ea83a3'/%3E%3C/g%3E%3C/svg%3E%0A");
+        // if you want to use a normal check, use this:
+        // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg id='Group_188' data-name='Group 188' transform='translate(-3916 -10735)'%3E%3Ccircle id='Ellipse_14' data-name='Ellipse 14' cx='12' cy='12' r='12' transform='translate(3916 10735)' fill='%23fff'/%3E%3Cg id='noun-checkmark-1273241' transform='translate(3902.002 10712.021)'%3E%3Cg id='Group_156' data-name='Group 156' transform='translate(19.998 30.98)'%3E%3Cpath id='Path_40' data-name='Path 40' d='M31.907,983.348a.63.63,0,0,0-.368.191c-2.091,2.095-4.566,4.2-6.75,6.349l-3.779-2.833a.631.631,0,1,0-.762,1.005l4.206,3.155a.631.631,0,0,0,.828-.059c2.214-2.219,4.878-4.453,7.15-6.73a.631.631,0,0,0-.526-1.078Z' transform='translate(-19.998 -983.342)' fill='%23000'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+        // and remove these props
+        background-position: 50% 60%;
+        background-size: 70%;
       }
     }
   }
 
   &__name {
     grid-area: name;
-    margin-top: 0.5rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 
     &-latin {
-      margin-top: 0.25rem;
       grid-area: latin-name;
+      color: var(--color-grey-darker);
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
 }
