--- a/plantswap/components/contact/contact.module.scss
+++ b/plantswap/components/contact/contact.module.scss
@@ -1,65 +1,87 @@
 .contact {
-   &__section {
     height: 100vh;
-    scroll-snap-align: start;
+    width: 100vw;
     background-color: rgb(229, 229, 229);
     display: flex;
+    flex-direction: row;
     input[type="text"] {
         height: 32px;
     }
-    textarea {
-        height: 100px;
+    &__image {
+        height: 100%;
+        width: auto;
     }
-   }
-
-   &__container {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    width: 70%;
-    margin-bottom: 10px;
-   
-   }
-    &__form {
+    &__container {
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-       
-    }
-    &__form form{
-        display: flex;
-        flex-direction: column;
-        gap: 1.4em;
-        button {
-            max-width: 150px;
+        width: 100%;
+        &-contactform {
+            width: 32em;
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+            form {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 1em;
+                textarea {
+                    height: 100px;
+                }
+                button {
+                    max-width: 150px;
+                }
+            }
+            &-names {
+                display: flex;
+                flex-direction: row;
+                gap: 1em;
+                input {
+                    width: 100%;
+                }
+            }
         }
-    }
-    &__formName {
-       
-        display: flex;
-        gap: 10px;
-        flex-direction: row;
-        input[type="text"] {
-            width: 100%;
-        }
-    }
+    } 
+}
 
-    &__imagediv {
-        img {
-            height: 100%;
-            width: auto;
+@media(max-width: 550px) {
+    .contact {
+        input[type="text"] {
+            width: 450px;
+        }
+        &__container {
+            &-contactform {
+                align-items: center;
+                form {
+                    align-items: center;
+                    textarea {
+                        width: 450px;
+                    }
+                    button {
+                        max-width: 150px;
+                    }
+                }
+                article {
+                    width: 450px;
+                }
+                &-names {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1em;
+                    input {
+                        width: 100%;
+                    }
+                }
+            }
+        } 
+    } 
+}
+
+@media(max-width: 880px) {
+    .contact {
+        &__image {
+            display: none;
         }
     }
 }
-
-@media (max-width: 800px) {
-    .contact {
-        &__section {
-            flex-wrap: wrap;
-        }
-    &__imagediv {
-        display: none;
-    }
-    }
-    }
