--- a/plantswap/src/app/[lang]/globals.css
+++ b/plantswap/src/app/[lang]/globals.css
@@ -1,25 +1,25 @@
 :root {
-	--XXS-spacer: 4px;
-	--XS-spacer: 8px;
-	--S-spacer: 16px;
-	--M-spacer: 24px;
-	--L-spacer: 32px;
-	--XL-spacer: 40px;
-	--XXL-spacer: 48px;
-	--XXXL-spacer: 56px;
-	
---background-light:#e1edd4;
-	--color-text: #2f1202; /* titles */
+  --XXS-spacer: 4px;
+  --XS-spacer: 8px;
+  --S-spacer: 16px;
+  --M-spacer: 24px;
+  --L-spacer: 32px;
+  --XL-spacer: 40px;
+  --XXL-spacer: 48px;
+  --XXXL-spacer: 56px;
 
-	--header-color: #07060f;
+  --background-light: #e1edd4;
+  --color-text: #2f1202; /* titles */
+
+  --header-color: #07060f;
 
   --primary-text-color: #212121;
   --secondary-text-color: #ffffff;
   --tertiary-text-color: #777777;
   --quaternary-text-color: #186300;
 
-	--wireframe-background-color: #e9e9e9;
-	--wireframe-btn-background-color: #acacac;
+  --wireframe-background-color: #e9e9e9;
+  --wireframe-btn-background-color: #acacac;
 
   --plant-based-background-color: white;
 
@@ -54,7 +54,6 @@
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
 
   --max-width: 1100px;
   --pill-border-radius: 99px;
@@ -92,12 +91,11 @@
     #00000080
   );
 
-	--button-color: #000000;
+  --button-color: #000000;
+
   --header-height: 52px;
   --column-count: 1;
-
   --transition-settings: 200ms ease-in-out;
-
 }
 
 @media (prefers-color-scheme: dark) {
@@ -147,16 +145,16 @@ body {
 
 body {
   color: rgb(var(--color-bg));
-	/* background-color: #afc999; */
-	background-color: var(--background-light);
-	transition: 1s;
+  /* background-color: #afc999; */
+  background-color: var(--background-light);
+  transition: 1s;
   min-height: 100dvh;
 }
 
-body:has([aria-collapsed='false']) {
-	overflow: hidden;
-	height: 100vh;
-	transition: 1s;
+body:has([aria-collapsed="false"]) {
+  overflow: hidden;
+  height: 100vh;
+  transition: 1s;
 }
 
 a {
@@ -176,16 +174,15 @@ ul {
 
 /* Mobile */
 @media (min-width: 22em) {
-	:root {
-		--column-count: 2;
-	}
-}
-
-/* Mobile */
-@media (min-width: 44em) {
-
   :root {
     --column-count: 2;
   }
 }
 
+/* Mobile */
+@media (min-width: 44em) {
+  :root {
+    --column-count: 2;
+    --header-height: 70px;
+  }
+}
